--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
        <li>I love dogs</li>
        <li>Playing Cricket
       </ol>
+  <p>I am a quite introvert person in public but very extrovert type person with my friends and family and also I am little shy type person. I am having some trouble in asking questions in class or any stranger but I am very productive person I utilise each minute while doing work or doing studies. I think a lot about small thing and get worried about it and I literary create a scenario in my mind which never happed and get worried about that one. But I can still say that I am handling all these things very nicely.</p>
 </li>
 </ul>
 <br /><br /><br /><br />
