--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
  <head>
  <title>Assignment 1</title>
  </head>
- <body background="">
+ <body background="backgrounds.jpg">
 <h1 align = "center"><font size = "6" color = "navy blue">PERSONAL INFORMATION</h1></font>
-  <img src="vivek1.jpg">
+  <center><img src="vivek1.jpg">
 <br /><br /><br />
+<font size="4">
 <ul>
 <li><b>Name</b> = Vivek Chaudhary</li>
 <li>
@@ -23,6 +24,8 @@
 <b>Language spoken</b> = Hindi(mother tongue) and Engligh
 </li>
 <li>
+</center>
+<br /><br />
 <b>Interest or Hobby:-</b>
       <ol>
        <li>Listening Music</li>
@@ -33,13 +36,16 @@
   <p>I am a quite introvert person in public but very extrovert type person with my friends and family and also I am little shy type person. I am having some trouble in asking questions in class or any stranger but I am very productive person I utilise each minute while doing work or doing studies. I think a lot about small thing and get worried about it and I literary create a scenario in my mind which never happed and get worried about that one. But I can still say that I am handling all these things very nicely.</p>
 </li>
 </ul>
+</font>
 <br /><br /><br /><br />
 <h2 align = "center"><font size = "6" color = "navy blue">INTEREST IN IT</h2></font>
+<font size="4">
 <ul>
 <li>My interest in IT is based mainly on <b>programming and application development </b>(including game development). My interest in IT starts when I purchased my fisrt PC and started doing some programming.</li>
 <li>As we know <b>RMIT </b>is one of the biggest university in Australia and as I chose to study IT so <b>RMIT</b> is one of the best option for me as a international student. Professors in <b>RMIT </b>have excellent knowledge about their field and they can guid me in achieving my goals in my life  </li>
 <li>During my studying IT in <b>RMIT</b> I am expecting that I am going to master programming, learn mobile application development,learn database concepts and learn what is the importance of IT in daily life.</li>
 </ul>
+</font>
 <br /><br /><br /><br />
 <h3 align = center><font size = "6" color = "navy blue">IDEAL JOB</h3></font>
 <h>
@@ -50,6 +56,7 @@
 <br /><br /><br /><br />
 <a href= "https://www.seek.com.au/job/56152403?type=standard#sol=bc7f62eb2273ce1bb06095e180ea5c4b97e498e7"><b>Job link </b></a>
 <br /><br /><br /><br />
+<font size="4">
 <ul><li>The position of this job is Mobile App Developer in the company name Redx Technology Australia. I found this job on Seek.com.</li>
   <br /><br />
 <li><b>Things that make this job appealing to me are:-</b>
@@ -88,6 +95,7 @@
 </ol>
 </ul>
 <br /><br /><br /><br />
+</font>
 <h4 align = "center"><font size = "6" color = "navy blue">PERSONAL PROFILE</h4></font>
 <ul>
   <br /><br /><br />
@@ -103,11 +111,14 @@
     <br /><br /><br />
     <img src="big5 (1).png" width="600" height="400">
     <br /><br /><br /><br />
+    <font size="4">
     <li>For me these type of test build profile of an individual so others can understand one's capability of doing any work. If other team members see my result of these test and find me as a good or bad option for their team, that may influence my behaviour in a team. When forming a team it's important to know the capabilities of each team member, these type of test help to find out how they see the world and how they prefer act and these tests also helps in building team profile, which can be used to bridge understanding and improve team collaboration.     </li>
     <br /><br /><br /><br />
+  </font>
     <h4 align = center><font size = "6" color = "navy blue">PROJECT IDEA</h4></font>
     <br /><br /><br /><br />
     <ul>
+    <font size="4">
     <li><b>	FINGERPRINT AND IRIS SCAN BASED ATM SYSTEM: -</b></li>
     </ul>
     <br /><br />
@@ -181,3 +192,6 @@
       <b>Outcome: -</b>
           <br /><br />
           <p>If this project become successful than it solves various daily life problems such as lost and stolen of an ATM card because there is no need to carry ATM card anywhere, every user can do transections in more convenient and safer way by using their biometrics (fingerprint and iris scan). Everyone wants secure environment to transfer money, It provides a triple layer security (fingerprint, iris scan and pin code) for user’s every transaction. Overall this project idea can provide a secure platform to do banking transactions using ATM details.</p>
+        </font>
+      </body>
+      </html>
