--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
  <title>Assignment 1</title>
  </head>
  <body background="backgrounds.jpg">
-<h1 align = "center"><font size = "6" color = "navy blue">PERSONAL INFORMATION</h1></font>
+   <a href="#Personal_info">PERSONAL INFORMATION</a>
+   <br />
+   <a href="#interest_in_IT">INTEREST IN IT</a>
+   <br />
+   <a href="#ideal_job">IDEAL JOB</a>
+   <br />
+   <a href="#personal_profile">PERSONAL PROFILE</a>
+   <br />
+   <a href="#project_idea">PROJECT IDEA</a>
+   <br />
+<h1 id="Personal_info" align = "center"><font size = "6" color = "navy blue">PERSONAL INFORMATION</h1></font>
   <center><img src="vivek1.jpg">
 <br /><br /><br />
 <font size="4">
@@ -38,7 +48,7 @@
 </ul>
 </font>
 <br /><br /><br /><br />
-<h2 align = "center"><font size = "6" color = "navy blue">INTEREST IN IT</h2></font>
+<h2 id="interest_in_IT" align = "center"><font size = "6" color = "navy blue">INTEREST IN IT</h2></font>
 <font size="4">
 <ul>
 <li>My interest in IT is based mainly on <b>programming and application development </b>(including game development). My interest in IT starts when I purchased my fisrt PC and started doing some programming.</li>
@@ -47,7 +57,7 @@
 </ul>
 </font>
 <br /><br /><br /><br />
-<h3 align = center><font size = "6" color = "navy blue">IDEAL JOB</h3></font>
+<h3 id="ideal_job" align = center><font size = "6" color = "navy blue">IDEAL JOB</h3></font>
 <h>
   <font size= "5" color="green"><u><b>Mobile App Developer</b></u></font>
 </h>
@@ -96,7 +106,7 @@
 </ul>
 <br /><br /><br /><br />
 </font>
-<h4 align = "center"><font size = "6" color = "navy blue">PERSONAL PROFILE</h4></font>
+<h4 id="personal_profile" align = "center"><font size = "6" color = "navy blue">PERSONAL PROFILE</h4></font>
 <ul>
   <br /><br /><br />
   <li><h><font size = "5" color = green><b>Online Myers-Briggs Test Result:-</b></h></li></font>
@@ -115,7 +125,7 @@
     <li>For me these type of test build profile of an individual so others can understand one's capability of doing any work. If other team members see my result of these test and find me as a good or bad option for their team, that may influence my behaviour in a team. When forming a team it's important to know the capabilities of each team member, these type of test help to find out how they see the world and how they prefer act and these tests also helps in building team profile, which can be used to bridge understanding and improve team collaboration.     </li>
     <br /><br /><br /><br />
   </font>
-    <h4 align = center><font size = "6" color = "navy blue">PROJECT IDEA</h4></font>
+    <h4 id="project_idea" align = center><font size = "6" color = "navy blue">PROJECT IDEA</h4></font>
     <br /><br /><br /><br />
     <ul>
     <font size="4">
